# Online_store

./: README.md  pyproject.toml
data/: homework.txt  old_HW
src/: category.py  main.py  product.py  utils.py
tests/: conftest.py  test_category.py  test_product.py
